# llmveridrop

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  OPENAI_API_PROTOCOL_VALIDATION.md  README.md  SECURITY.md  bench.sh  deploy.sh  docker-compose.yml  pyproject.toml  veridrop.service
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: test.yml
data/baselines/: README.md  claude-haiku-4-5_full.json  claude-opus-4-6_full.json  claude-opus-4-7_full.json  claude-sonnet-4-6_full.json
scripts/: build_test_pdf.py
src/relay_detector/: __init__.py  cli.py  client.py  comparator.py  config.py  models.py  report.py  runner.py  scorer.py
src/relay_detector/core/: long_context.py  models.py
src/relay_detector/data/: behavioral_signatures.json  knowledge_questions.json
src/relay_detector/detectors/: __init__.py  base.py  (+10 more)
tests/: conftest.py  test_active_detectors.py  test_anthropic_long_context.py  test_batch_results.py  test_cli_protocol_resolve.py  test_client.py  test_comparator.py  test_deepseek_protocol.py  test_jobs_long_context.py  test_leaderboard_detail.py  test_long_context.py  test_openai_baseline.py  test_openai_protocol_templates.py  test_passive_detectors.py  test_probe.py  test_scorer.py
web/: __init__.py  image_report.py  jobs.py  leaderboard.py  probe.py  server.py
web/static/: app.js  llms.txt  style.css
web/templates/: base.html  batch.html  deepseek.html  hub.html  index.html  leaderboard.html  leaderboard_detail.html  logs.html  openai.html  result.html  running.html
(+18 files in other folders)
